objects/User.object
<CustomObject>
    <fields>
        <fullName>Five9__Five9AgentId__c</fullName>
        <label>Five9 Agent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent_Login_TimeStamp__c</fullName>
        <label>Five9Agent Login TimeStamp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDCTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable All Duplicate Check triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AllowMapsExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Maps Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maps Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLatitude__c</fullName>
        <label>Maps Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLongitude__c</fullName>
        <label>Maps Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultType__c</fullName>
        <label>DefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DefaultZoomLevel__c</fullName>
        <label>Maps Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <formula>&quot;MALiveAvail-&quot; + LEFT($Organization.Id, 15) + &quot;-&quot; + LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceVendor__c</fullName>
        <formula>&quot;MapAnything&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EditMapsOrgWideQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Maps Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FinishedAdvRouteSetup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Maps Advanced Route Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapsSetting__c</fullName>
        <label>Map Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MaxExportSize__c</fullName>
        <label>Maps Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySize__c</fullName>
        <label>Maps Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPPublisher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Publisher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>maps__Version__c</fullName>
        <label>Maps Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__QuickCompleteCountry__c</fullName>
        <label>QuickComplete Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2DisableAutoValidate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable RV Direct Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recordval__rv2DisableTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable All Record Validation Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__GitHub_Primary_Email_Address__c</fullName>
        <description>The primary email address used to configure git when we are connecting to a GitHub Repository</description>
        <label>GitHub Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>voice_connector__Aircall_User_Identifier__c</fullName>
        <label>Aircall User Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__Dialpad_User_Identifier__c</fullName>
        <label>Dialpad User Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_connector__RingCentral_User_Identifier__c</fullName>
        <label>RingCentral User Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>